k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-app-backend
spec:
  selector:
    matchLabels:
      app: job-app-backend
  template:
    metadata:
      labels:
        app: job-app-backend
    spec:
      containers:
      - name: backend
image: doua82400/job-app-backend:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
