k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
spec:
  selector:
    app: job-app-backend
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
      
  type: ClusterIP
